<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CineFAST</string>
    <string name="splash_cine">Cine</string>
    <string name="splash_fast">FAST</string>
    <string name="logo_desc">CineFAST logo</string>
    <string name="onboarding_title">Explore now</string>
    <string name="onboarding_subtitle">to experience the benefits</string>
    <string name="onboarding_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="onboarding_button">Get Started</string>
    <string name="onboarding_bg_desc">Onboarding background pattern</string>
    <string name="login_title">Log In</string>
    <string name="signup_title">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_name">Text your name</string>
    <string name="hint_email">Text your email</string>
    <string name="hint_password">Text your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_action">Log In</string>
    <string name="signup_action">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register Now</string>
    <string name="back_button_desc">Go back</string>
    <string name="error_email_required">Email is required.</string>
    <string name="error_name_required">Name is required.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_password_length">Password must be at least 8 characters.</string>
    <string name="error_password_match">Passwords do not match.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="signup_failed">Sign up failed: %1$s</string>
    <string name="user_save_failed">User data save failed: %1$s</string>
    <string name="remember_me_hint">Firebase keeps users signed in by default.</string>
    <string name="hello_world">Hello World!</string>
    <string name="logout">Logout</string>
    <string name="home_select_date">Select Date</string>
    <string name="home_today">Today</string>
    <string name="home_tomorrow">Tomorrow</string>
    <string name="home_now_showing">Now Showing</string>
    <string name="home_coming_soon">Coming Soon</string>
    <string name="home_trailer">Trailer</string>
    <string name="home_book_seats">Book Seats</string>
    <string name="home_seat_selection">Seat Selection</string>
    <string name="home_selected_movie">Selected Movie</string>
    <string name="home_movie_poster_desc">Movie poster for %1$s</string>
    <string name="home_play_trailer_desc">Play trailer for %1$s</string>
    <string name="home_trailer_unavailable">No app can open this trailer.</string>
    <string name="home_back_to_movies">Back to movies</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_bookings">My Bookings</string>
    <string name="menu_last_booking">Last Booking</string>
    <string name="logout_confirm_title">Logout</string>
    <string name="logout_confirm_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="google_logo_desc">Google logo</string>
    <string name="or_separator">OR</string>
</resources>